文件重命名

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -31,13 +31,13 @@ set_target_properties(swresample PROPERTIES IMPORTED_LOCATION ${FF}/libswresampl
 
 
 add_library( # Sets the name of the library.
-        native-lib
+        inkplayer
 
         # Sets the library as a shared library.
         SHARED
 
         # Provides a relative path to your source file(s).
-        src/main/cpp/native-lib.cpp )
+        src/main/cpp/inkplayer.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -57,7 +57,7 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-        native-lib
+        inkplayer
         android
         avcodec avformat avutil swscale swresample
         # Links the target library to the log library
