--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -41,7 +41,8 @@ add_library( # Sets the name of the library.
         src/main/cpp/inkplayer.cpp
         src/main/cpp/IDemux.cpp
         src/main/cpp/InkDemux.cpp
-        src/main/cpp/InkData.cpp)
+        src/main/cpp/InkData.cpp
+        src/main/cpp/InkThread.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
